--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    color: rgb(52, 52, 83);
-    background: rgb(190, 185, 185);
+    color: #8C7E7E;
+    background: #D9D9D9;
 }
 
 section{
@@ -31,6 +31,10 @@ section{
     font-size: 2em;
 }
 
+.elementos .contador{
+    color: #7E878C;
+}
+
 .elementos .botoes{
     margin-top: 10px;
 }
@@ -44,8 +48,8 @@ section{
 }
 
 .elementos button:hover{
-    background: rgb(68, 66, 66);
+    background: #8C7E7E;
     color: white;
-    border: 1px solid rgb(68, 66, 66);
+    border: 1px solid #C3D0D9;
     transition: all ease-in 0.15s
 }
